<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Areas">

    <Spinner
        android:id="@+id/area_sp_shapes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/shapes"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/areas_et_rectangle_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_rectangle_width_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/areas_et_rectangle_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_rectangle_height_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/areas_et_circle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/areas_circle_radius_hint"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/areas_et_triange_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_triangle_base_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/areas_et_triangle_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_triangle_height_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/areas_bt_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculating"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/areas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#63021577"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />
</LinearLayout>